--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 /* all document css */
 
 html * {
-  font-size: 1em !important;
+  font-size: 1em ;
   color: rgb(255, 255, 255) !important;
   font-family: "Roboto", sans-serif;
+  margin-left: 1em;
+  margin-right: 1em;
+
 }
 
 .title {
@@ -11,8 +14,10 @@ html * {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  margin-top: 2em;
+  margin-top: 0.5em;
+  font-size: 50px !important;
 }
+
 img {
   float: right;
   width: 30%;
@@ -55,3 +60,10 @@ img.scaled {
 }
 
 /* ------- */
+
+footer {
+  position:absolute;
+  bottom:0;
+  text-align: justify;
+  left: 0;
+}
