--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 /* all document css */
 
+
+
 html * {
   font-size: 1em ;
-  color: rgb(255, 255, 255) !important;
+  color: rgb(255, 255, 255);
   font-family: "Roboto", sans-serif;
   margin-left: 1em;
   margin-right: 1em;
@@ -57,6 +59,34 @@ figure p {
 }
 img.scaled {
   width: 100%;
+}
+
+
+button {
+  color:white;
+  background-color:#1B2021; 
+  border: 2px solid white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+#settingsButton{
+  float:right;
+}
+
+#settings{
+  background-color:#1B2021; 
+  border: 2px solid white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -250px;
+  margin-left: -150px;
+  width: 300px;
+  height: 500px;
 }
 
 /* ------- */
