--- a/style.css
+++ b/style.css
@@ -1,14 +1,12 @@
 /* all document css */
 
-
-
-html * {
+html {
+  --backgroundColor: #1B2021;
   font-size: 1em ;
   color: rgb(255, 255, 255);
   font-family: "Roboto", sans-serif;
   margin-left: 1em;
   margin-right: 1em;
-
 }
 
 .title {
@@ -22,60 +20,75 @@ html * {
 #pageTitle{
   font-size: 50px !important;
 }
-
-img {
-  float: right;
-  width: 30%;
-}
-
-section {
-  display: flex;
-  justify-content: left;
-  height: 100%;
-}
-
-section img{
-    align-content: space-between;
-    align-content: flex-end;
-}
-.spacer {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
 /* ----------------- */
 
-ul{
-  list-style-type: none;
+/* ----Containers--- */
+.container-row{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-.settingsButtons {
+.item-row {
+  height: 500px;
+  margin: 5px;
+  padding: 5px;
+  line-height: 150px;
+  color: white;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
+}
+
+.container-col{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+}
+
+.item-col {
+  /* margin: 5px;
+  padding: 5px; */
+  height: 10%;
+  line-height: 150px;
+  color: white;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
+}
+
+/* ----------------- */
+
+.settingsButtons{
   color:white;
-  background-color:#1B2021; 
+  background-color: var(--backgroundColor);
   border: 2px solid white;
-  padding: 15px 32px;
+  /* padding: 15px 32px; */
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   height: 53px;
-  width: 300px;
-  /*margin-top: 2px;
-  margin-bottom: 2px;*/
+  width: 100%;
 } 
 
-.settingsDiv{
-  float:right;
-  
-}
-
-#settings{
-  background-color:#1B2021; 
+.settingsContainer{
   border: 2px solid white;
-  width: 300px;
-  height: 500px;
+  width: 20%;
 }
 
+#settingsBox{
+
+  height: 60%;
+}
 #settingsTitle{
   font-size: 25px;
 }
+
+#gameArea{
+  width: 100%;
+  border: 2px solid white;
+}
+
 /* ------- */
