--- a/style.css
+++ b/style.css
@@ -139,13 +139,60 @@ html {
 /* ---------------------------------------------Board--------------------------------------------- */
 
 .board-container{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 5px;
+  display:flex;
+  height:40%;
+  width:90%;
+  border-radius:50px;
+  padding:30px;
 }
+
 .holes{
-  width: 10px;
-  height: 10px;
+  font-size: 1rem;
+  text-align: center;
+  width: 50px;
+  height: 50px;
+}
+/* ----------------------------------------------------------------------------------------------- */
+
+
+.section{
+  background-color:rgba(255, 255, 255, 0.03);
+  margin:5px;
+}
+
+.endsection{
+  display:flex;
+  flex-grow:1;
+}
+
+.midsection{
+  display:flex;
+  flex-direction:column;
+  flex-grow:6;
+}
+
+.midrow {
+  display:flex;
+  flex-grow:1;
+}
+
+.pot {
+  position:relative;
+  background-color:rgba(255, 255, 255, 0.08);
+  flex-grow:1;
+  margin:5px;
+  border-radius:50px;
+}
+
+.pot:hover {
+  background-color: yellow;
+}
+
+.bead {
+  position:absolute;
+	border-radius: 50%;
+	width: 25px;
+	height: 25px;
 }
 
 /* ----------------------------------------------------------------------------------------------- */
