--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ html {
   width:90%;
   border-radius:50px;
   padding:30px;
+  background: #a58c2a;
 }
 
 .holes{
@@ -184,7 +185,7 @@ html {
 
 .pot {
   position:relative;
-  background-color:rgba(255, 255, 255, 0.08);
+  background-color:rgba(255, 255, 255, 0.50);
   flex-grow:1;
   margin:5px;
   border-radius:50px;
