Fixed a bug on CSS that was messing with the player 2 pot size

--- a/style.css
+++ b/style.css
@@ -200,8 +200,9 @@ html {
 }
 
 .seedCountPT{
-  position: relative;
+  position: absolute;
   top: -30px;
+  width: 100%;
 }
 .bead {
   position:absolute;
