--- a/style.css
+++ b/style.css
@@ -76,6 +76,12 @@ html {
   padding: 5px;
 }
 
+.radiobutton{
+  display: flex;
+  justify-content: space-around;
+  gap: 1px;
+}
+
 /* -------------------------- */
 
 /* ----Sizes of containers--- */
@@ -137,6 +143,10 @@ html {
 #cancel{
   background-color: red !important;
 }
+#start{
+  height: 80px;
+  /* background-color: #0040ff !important; */
+}
 /* -------------------------- */
 
 /* ----------------------------------------------------------------------------------------------- */
@@ -157,6 +167,14 @@ html {
   text-align: center;
   width: 50px;
   height: 50px;
+}
+
+.bead {
+  height: 25px;
+  width: 25px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
 }
 /* ----------------------------------------------------------------------------------------------- */
 
