--- a/public/style.css
+++ b/public/style.css
@@ -159,7 +159,8 @@ html {
   width:90%;
   border-radius:50px;
   padding:30px;
-  background: #a58c2a;
+  background-color: rgba(194, 125, 52, 0.65);
+  box-shadow: inset 10px 10px 10px rgba(0, 0, 0, 0.5);
 }
 
 .holes{
@@ -203,11 +204,12 @@ html {
 
 .pot {
   position:relative;
-  background-color:rgba(255, 255, 255, 0.50);
   flex-grow:1;
   margin:5px;
   border-radius:50px;
   text-align: center;
+  background-color: rgba(194, 125, 52, 0.65);
+  box-shadow: inset 10px 10px 10px rgba(0, 0, 0, 0.5);
 }
 
 
