--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ html {
 #apply{
   background-color: green !important;
 }
-#cancel{
+#leave{
   background-color: red !important;
 }
 #start{
@@ -287,6 +287,6 @@ html {
 #login_name{
   display: none;
   align-items: center;
-  position: fixed;
+  position: absolute;
   right: 10%;
 }
